--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build
-    - run: npm run deploy
+    - run: |
+        git config --global user.email "fake@email.com"
+        git config --global user.name "Deploy Bot"
+        npm run deploy
