--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm ci && npm run build",
-    "deploy": "gh-pages -b gh-pages-dev -d build -m 'Auto deploy via npm run deploy'"
+    "deploy": "gh-pages -b gh-pages-dev -d build -m \"Auto deploy via npm run deploy\""
   },
   "eslintConfig": {
     "extends": [
